# amazon-prices-bot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pre-commit  pyproject.toml  requirements.txt  settings.py
api/: __init__.py  amazon_api.py  base.py  core.py  mock_api.py
api/mock_data/: test_response.json  test_response_2.json
database/: __init__.py  core.py  crud.py  models.py
enums/: __init__.py  enums.py
telegram/: bot.py
telegram/handlers/: common.py  custom.py  hello_world.py  high.py  low.py  qol.py
