[tool.poetry]
name = "python-basic-diploma"
version = "0.1.0"
description = ""
authors = ["Nikita Mikhaliuk <nikkita1992@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
aiohttp = "^3.9.1"
aiogram = "^3.2.0"
peewee = "^3.17.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[tool.ruff]
fix = true
ignore-init-module-imports = true
exclude = [".venv"]
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`)
select = ["E4", "E7", "E9", "F", "B", "W", "C901"]
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
